--- a/CV.html
+++ b/CV.html
@@ -24,7 +24,7 @@ body{background-color:#844E43;}
 	<div class="col-md-9 col-sm-9" style="background-color:#D9D9D9;height:200px">
 		<h3>Career objective:</h3><hr>
 		<article>
-		<p>To take up a challenging career grows with honesty,loyalty,good relationship and best performance as well as my knowledge,skills and abilities into value for an organization.</p>
+		<p>To take up a challenging career that grows with honesty,loyalty,good relationship and best performance as well as my knowledge,skills and abilities into value for an organization.</p>
 		</article>
 	</div>		
 	
