--- a/CV.html
+++ b/CV.html
@@ -19,7 +19,7 @@ body{background-color:#844E43;}
 
 <div class="row" style="margin:40px 350px;border:2px solid black;">
 	<div class="col-md-3 col-sm-3" style="height:200px;padding:0px;">
-		<img src="https://i.imgur.com/WYXZfhk.jpg" width="207px" height="200px" alt="picture">
+		<img src="https://i.imgur.com/WYXZfhk.jpg" width="100%" height="200px" alt="picture">
 	</div>
 	<div class="col-md-9 col-sm-9" style="background-color:#D9D9D9;height:200px">
 		<h3>Career objective:</h3><hr>
@@ -60,7 +60,7 @@ body{background-color:#844E43;}
 			<li><a href="https://tajwar99.github.io/final_project.html">Facebook login page</a></li>
 		</ul>
 	</div>
-	<div class="col-md-9 col-sm-9" style="top:-40px;background-color:white">
+	<div class="col-md-9 col-sm-9" style="top:-40px;background-color:white;height:927px">
 		<h3>Education:</h3><hr>
 		<table border="2" cellspacing="1">
 			<tr>
