--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ form{padding-left:350px;}
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
 	 </button>
+	 <img id="img" src="proj1.PNG">
 	 <a href="#" class="navbar-brand"><h2 style="color:white">BOOTSTRAP</h2></a> 
    </div>
    <div class="collapse navbar-collapse" id="nav1">
