--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ nav{height:100px;padding-left:250px;padding-right:250px;}
 ul{padding-top:11px;}
 .intro{background-color:#1ABC9C;height:800px;margin-top:0px;}
 #navigation{background-color:#2C3E50;margin-bottom:0px;border-bottom:0px;}
-#img{width:400px;padding-top:180px;margin-left:570px;}
+#img{width:400px;padding-top:180px;}
 #head{font-family: sans-serif, "Helvetica Neue", "Lucida Grande", Arial;font-stretch: expanded;color:white;}
 h4:hover{filter:invert(70%);}
 body{
@@ -50,10 +50,8 @@ form{padding-left:350px;}
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
 	 </button>
-	 
 	 <a href="#" class="navbar-brand"><h2 style="color:white">BOOTSTRAP</h2></a> 
    </div>
-	   <img id="img" src="proj1.PNG">
    <div class="collapse navbar-collapse" id="nav1">
     <ul class="nav navbar-nav navbar-right">
 	 <li><a href="#portfolio"><h4 style="color:white">Portfolio</h4></a></li>
@@ -64,7 +62,7 @@ form{padding-left:350px;}
   </nav>
   
   <div class="intro">
-   
+   <div style="text-align:center;"><img id="img" src="proj1.PNG" /></div>
    <h1 id="head" style="font-weight:bold;font-size:430%" align="center">BOOTSTRAP</h1>
    <div style="color:white" align="center">
    <i class="fas fa-minus fa-3x"></i>
